<resources>
    <string name="app_name">MisisApp</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_search">Поиск</string>
    <string name="title_organizations">Организации</string>
    <string name="title_group">Группа</string>
    <string name="title_profile">Профиль</string>
    <string name="lesson_info_text">Информация о паре</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Корп. почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recover_password"><u>Восстановить</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><u>Вернуться назад</u></string>
    <string name="check_failed">Session ended. Please login.</string>
    <string name="entry_button_text">Вход</string>
    <string name="auth_title_text">Авторизация</string>
    <string name="bug_report">Сообщить о проблеме</string>
    <string name="about_app">О приложении</string>
    <string name="settings">Настройки</string>
    <string name="appearence">Оформление</string>
    <string name="security">Безопасность</string>
    <string name="contracts_payments">Договоры и платежи</string>
    <string name="grades_attendance">Оценки и посещаемость</string>
</resources>