<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/skeletonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maskCornerRadius="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_info_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/day_schedule_item_background"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/lesson_number_background"
                        android:src="@drawable/ic_image_35"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/user_image"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/course_group_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:textColor="@color/darker_grey"
                            android:textStyle="bold"
                            tools:text="2 курс, БИВТ-23-9" />

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            tools:text="Студентов Студент Студентович" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/copy_email_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:backgroundTint="@color/grey"
                            android:ellipsize="marquee"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            app:cornerRadius="10dp"
                            app:icon="@drawable/ic_content_copy_35"
                            app:iconTint="@color/black"
                            tools:text="m####################@misis.ru" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_mode_edit_35"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.faltenreich.skeletonlayout.SkeletonLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/grades_attendance_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/grades_attendance"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_insights_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/payments_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/contracts_payments"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_savings_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/security_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/security"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_lock_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appearence_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/appearence"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_palette_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/settings"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_settings_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bug_report_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/bug_report"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_bug_report_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:padding="20dp"
                android:text="@string/about_app"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:cornerRadius="15dp"
                app:icon="@drawable/ic_info_35"
                app:iconSize="35dp"
                app:iconTint="@color/main_blue" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>